@@ -18,6 +18,7 @@ import static org.htmlunit.CookieManagerTest.HTML_ALERT_COOKIE;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.net.InetAddress;
+import java.net.URI;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
@@ -71,28 +72,28 @@ public class CookieManager4Test extends WebDriverTestCase {
     @BeforeAll
     public static void checkSettings() throws Exception {
         try {
-            InetAddress.getByName(new URL(URL_HOST1).getHost());
+            InetAddress.getByName(URI.create(URL_HOST1).getHost());
         }
         catch (final UnknownHostException e) {
             fail("Host configuration '" + URL_HOST1 + "' is not present");
         }
 
         try {
-            InetAddress.getByName(new URL(URL_HOST2).getHost());
+            InetAddress.getByName(URI.create(URL_HOST2).getHost());
         }
         catch (final UnknownHostException e) {
             fail("Host configuration '" + URL_HOST2 + "' is not present");
         }
 
         try {
-            InetAddress.getByName(new URL(URL_HOST3).getHost());
+            InetAddress.getByName(URI.create(URL_HOST3).getHost());
         }
         catch (final UnknownHostException e) {
             fail("Host configuration '" + URL_HOST3 + "' is not present");
         }
 
         try {
-            InetAddress.getByName(new URL(URL_HOST4).getHost());
+            InetAddress.getByName(URI.create(URL_HOST4).getHost());
         }
         catch (final UnknownHostException e) {
             fail("Host configuration '" + URL_HOST4 + "' is not present");
@@ -135,7 +136,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE, 200, "Ok",
                 MimeType.TEXT_HTML, responseHeader);
 
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
         verifyTitle2(getWebDriver(), getExpectedAlerts());
     }
@@ -198,7 +199,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE, 200, "Ok",
                 MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts()[0]);
 
         assertEquals(getExpectedAlerts()[1], driver.manage().getCookieNamed("c1").toString());
@@ -244,7 +245,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE, 200, "Ok",
                 MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST2), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST2).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts()[0]);
 
         assertEquals(getExpectedAlerts()[1], driver.manage().getCookieNamed("c1").toString());
@@ -288,7 +289,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE, 200, "Ok",
                 MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST3), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST3).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts()[0]);
 
         assertEquals(getExpectedAlerts()[1], driver.manage().getCookieNamed("c1").toString());
@@ -331,7 +332,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE, 200, "Ok",
                 MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST4), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST4).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts()[0]);
 
         assertEquals(getExpectedAlerts()[1], driver.manage().getCookieNamed("c12").toString());
@@ -389,7 +390,7 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "</body>\n"
                 + "</html>";
 
-        final WebDriver driver = loadPage2(html, new URL(URL_HOST1));
+        final WebDriver driver = loadPage2(html, URI.create(URL_HOST1).toURL());
         verifyTitle2(driver);
 
         assertEquals(4, driver.manage().getCookies().size());
@@ -437,7 +438,7 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "</body>\n"
                 + "</html>";
 
-        final WebDriver driver = loadPage2(html, new URL(URL_HOST2));
+        final WebDriver driver = loadPage2(html, URI.create(URL_HOST2).toURL());
         verifyTitle2(driver);
 
         assertEquals(2, driver.manage().getCookies().size());
@@ -483,7 +484,7 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "</body>\n"
                 + "</html>";
 
-        final WebDriver driver = loadPage2(html, new URL(URL_HOST3));
+        final WebDriver driver = loadPage2(html, URI.create(URL_HOST3).toURL());
         verifyTitle2(driver);
 
         assertEquals(2, driver.manage().getCookies().size());
@@ -532,7 +533,7 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "</body>\n"
                 + "</html>";
 
-        final WebDriver driver = loadPage2(html, new URL(URL_HOST4));
+        final WebDriver driver = loadPage2(html, URI.create(URL_HOST4).toURL());
         verifyTitle2(driver);
 
         final String[] expected = getExpectedAlerts();
@@ -555,7 +556,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE, 200, "Ok",
                 MimeType.TEXT_HTML, responseHeader);
 
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
 
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
         verifyTitle2(getWebDriver(), getExpectedAlerts());
@@ -573,7 +574,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE, 200, "Ok",
                 MimeType.TEXT_HTML, responseHeader);
 
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
 
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
         verifyTitle2(getWebDriver(), getExpectedAlerts());
@@ -598,7 +599,7 @@ public class CookieManager4Test extends WebDriverTestCase {
         final WebDriver webDriver = getWebDriver();
         webDriver.manage().deleteAllCookies();
 
-        loadPageWithAlerts2(new URL(URL_HOST1));
+        loadPageWithAlerts2(URI.create(URL_HOST1).toURL());
         WebRequest lastRequest = getMockWebConnection().getLastWebRequest();
         assertNull(lastRequest.getAdditionalHeaders().get(HttpHeader.COOKIE));
 
@@ -626,14 +627,14 @@ public class CookieManager4Test extends WebDriverTestCase {
         getMockWebConnection().setDefaultResponse(html, 200, "Ok", MimeType.TEXT_HTML, responseHeader);
 
         responseHeader.add(new NameValuePair("Location", URL_HOST1 + "next.html"));
-        getMockWebConnection().setResponse(new URL(URL_HOST1), "redirect", 301, "Ok", MimeType.TEXT_HTML,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), "redirect", 301, "Ok", MimeType.TEXT_HTML,
                 responseHeader);
 
         final WebDriver webDriver = getWebDriver();
         webDriver.manage().deleteAllCookies();
 
         final int startCount = getMockWebConnection().getRequestCount();
-        loadPageWithAlerts2(new URL(URL_HOST1));
+        loadPageWithAlerts2(URI.create(URL_HOST1).toURL());
         assertEquals(2, getMockWebConnection().getRequestCount() - startCount);
         final WebRequest lastRequest = getMockWebConnection().getLastWebRequest();
         assertEquals("c1=1; c2=2", lastRequest.getAdditionalHeaders().get(HttpHeader.COOKIE));
@@ -664,7 +665,7 @@ public class CookieManager4Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE);
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
         getMockWebConnection().setResponse(firstUrl, html, 200, "Ok", MimeType.TEXT_HTML, responseHeader1);
 
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
@@ -696,7 +697,7 @@ public class CookieManager4Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE);
-        final URL firstUrl = new URL(URL_HOST3);
+        final URL firstUrl = URI.create(URL_HOST3).toURL();
         getMockWebConnection().setResponse(firstUrl, html, 200, "Ok", MimeType.TEXT_HTML, responseHeader1);
 
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
@@ -724,7 +725,7 @@ public class CookieManager4Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE);
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
         getMockWebConnection().setResponse(firstUrl, html, 200, "Ok", MimeType.TEXT_HTML, responseHeader1);
 
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
@@ -751,7 +752,7 @@ public class CookieManager4Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE);
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
         getMockWebConnection().setResponse(firstUrl, html);
 
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
@@ -778,7 +779,7 @@ public class CookieManager4Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(CookieManagerTest.HTML_ALERT_COOKIE);
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
         getMockWebConnection().setResponse(firstUrl, html);
 
         loadPage2(firstUrl, StandardCharsets.ISO_8859_1);
@@ -802,7 +803,7 @@ public class CookieManager4Test extends WebDriverTestCase {
     @Test
     @Alerts("key1=\"Hi there\"; key2=Howdy")
     public void unqualifiedHost() throws Exception {
-        testCookies(new URL(URL_HOST4), "key1=\"Hi there\"", "key2=Howdy");
+        testCookies(URI.create(URL_HOST4).toURL(), "key1=\"Hi there\"", "key2=Howdy");
     }
 
     /**
@@ -811,7 +812,7 @@ public class CookieManager4Test extends WebDriverTestCase {
     @Test
     @Alerts("key1=\"Hi there\"; key2=Howdy")
     public void fullyQualifiedHost() throws Exception {
-        testCookies(new URL(URL_HOST1), "key1=\"Hi there\"", "key2=Howdy");
+        testCookies(URI.create(URL_HOST1).toURL(), "key1=\"Hi there\"", "key2=Howdy");
     }
 
     /**
@@ -831,10 +832,10 @@ public class CookieManager4Test extends WebDriverTestCase {
         responseHeader.add(new NameValuePair("Set-Cookie", "c7=stRiCT; SameSite=stRiCT"));
 
         getMockWebConnection().setDefaultResponse("");
-        getMockWebConnection().setResponse(new URL(URL_HOST1), HTML_ALERT_COOKIE,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), HTML_ALERT_COOKIE,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts());
         driver.get(URL_HOST1 + "foo");
 
@@ -881,10 +882,10 @@ public class CookieManager4Test extends WebDriverTestCase {
         responseHeader.add(new NameValuePair("Set-Cookie", "c5=unknown; SameSite=unknown"));
 
         getMockWebConnection().setDefaultResponse("");
-        getMockWebConnection().setResponse(new URL(URL_HOST1), HTML_ALERT_COOKIE,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), HTML_ALERT_COOKIE,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts());
         driver.get(URL_HOST2 + "foo");
 
@@ -911,10 +912,10 @@ public class CookieManager4Test extends WebDriverTestCase {
         responseHeader.add(new NameValuePair("Set-Cookie", "c5=unknown; SameSite=unknown"));
 
         getMockWebConnection().setDefaultResponse("");
-        getMockWebConnection().setResponse(new URL(URL_HOST1), HTML_ALERT_COOKIE,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), HTML_ALERT_COOKIE,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts());
         driver.get(URL_HOST2 + "foo");
         driver.get(URL_HOST1 + "foo");
@@ -964,12 +965,12 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "<body>\n"
                 + "</body></html>";
         getMockWebConnection().setDefaultResponse("");
-        getMockWebConnection().setResponse(new URL(URL_HOST1), HTML_ALERT_COOKIE,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), HTML_ALERT_COOKIE,
                 200, "OK", MimeType.TEXT_HTML, responseHeader);
-        getMockWebConnection().setResponse(new URL(URL_HOST1 + "include"), html,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1 + "include").toURL(), html,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts());
         driver.get(URL_HOST1 + "include");
 
@@ -1019,12 +1020,12 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "<body>\n"
                 + "</body></html>";
         getMockWebConnection().setDefaultResponse("");
-        getMockWebConnection().setResponse(new URL(URL_HOST1), HTML_ALERT_COOKIE,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), HTML_ALERT_COOKIE,
                 200, "OK", MimeType.TEXT_HTML, responseHeader);
-        getMockWebConnection().setResponse(new URL(URL_HOST2), html,
+        getMockWebConnection().setResponse(URI.create(URL_HOST2).toURL(), html,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts());
         driver.get(URL_HOST2);
 
@@ -1074,12 +1075,12 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "<iframe src='" + URL_HOST1 + "iframe.html'></iframe>\n"
                 + "</body></html>";
         getMockWebConnection().setDefaultResponse("");
-        getMockWebConnection().setResponse(new URL(URL_HOST1), HTML_ALERT_COOKIE,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), HTML_ALERT_COOKIE,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
-        getMockWebConnection().setResponse(new URL(URL_HOST1 + "include"), html,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1 + "include").toURL(), html,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts());
         driver.get(URL_HOST1 + "include");
 
@@ -1129,12 +1130,12 @@ public class CookieManager4Test extends WebDriverTestCase {
                 + "<iframe src='" + URL_HOST1 + "iframe.html'></iframe>\n"
                 + "</body></html>";
         getMockWebConnection().setDefaultResponse("");
-        getMockWebConnection().setResponse(new URL(URL_HOST1), HTML_ALERT_COOKIE,
+        getMockWebConnection().setResponse(URI.create(URL_HOST1).toURL(), HTML_ALERT_COOKIE,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
-        getMockWebConnection().setResponse(new URL(URL_HOST2 + "include"), html,
+        getMockWebConnection().setResponse(URI.create(URL_HOST2 + "include").toURL(), html,
                                         200, "OK", MimeType.TEXT_HTML, responseHeader);
 
-        final WebDriver driver = loadPage2(new URL(URL_HOST1), StandardCharsets.ISO_8859_1);
+        final WebDriver driver = loadPage2(URI.create(URL_HOST1).toURL(), StandardCharsets.ISO_8859_1);
         verifyTitle2(driver, getExpectedAlerts());
         driver.get(URL_HOST2 + "include");
 
@@ -1196,7 +1197,7 @@ public class CookieManager4Test extends WebDriverTestCase {
             + "</script></body>\n"
             + "</html>";
 
-        final URL firstUrl = new URL(URL_HOST1);
+        final URL firstUrl = URI.create(URL_HOST1).toURL();
         getMockWebConnection().setResponse(firstUrl, html);
         loadPage2(html, firstUrl);
 
