@@ -14,6 +14,7 @@
  */
 package org.htmlunit.javascript.host;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 import java.util.Map;
@@ -395,7 +396,7 @@ public class Location2Test extends WebDriverTestCase {
             + "</body></html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        loadPage2(html, new URL(url));
+        loadPage2(html, URI.create(url).toURL());
         verifyTitle2(getWebDriver(), getExpectedAlerts());
     }
 
@@ -510,7 +511,7 @@ public class Location2Test extends WebDriverTestCase {
             + "</body></html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        loadPage2(html, new URL(url));
+        loadPage2(html, URI.create(url).toURL());
         verifyTitle2(getWebDriver(), getExpectedAlerts());
     }
 
@@ -1195,7 +1196,7 @@ public class Location2Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        final WebDriver driver = loadPage2(html, new URL(URL_FIRST + "a.html?p1=sieben&p2"));
+        final WebDriver driver = loadPage2(html, URI.create(URL_FIRST + "a.html?p1=sieben&p2").toURL());
         assertEquals(1, getMockWebConnection().getRequestCount());
 
         driver.findElement(By.id("link")).click();
@@ -1240,7 +1241,7 @@ public class Location2Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        final WebDriver driver = loadPage2(html, new URL(URL_FIRST + "a.html"));
+        final WebDriver driver = loadPage2(html, URI.create(URL_FIRST + "a.html").toURL());
         assertEquals(1, getMockWebConnection().getRequestCount());
 
         driver.findElement(By.id("reload")).click();
@@ -1289,7 +1290,7 @@ public class Location2Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        final WebDriver driver = loadPage2(html, new URL(URL_FIRST + "a.html"));
+        final WebDriver driver = loadPage2(html, URI.create(URL_FIRST + "a.html").toURL());
         assertEquals(1, getMockWebConnection().getRequestCount());
 
         driver.findElement(By.id("reload")).click();
@@ -1332,7 +1333,7 @@ public class Location2Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        final WebDriver driver = loadPage2(html, new URL(URL_FIRST + "a.html"));
+        final WebDriver driver = loadPage2(html, URI.create(URL_FIRST + "a.html").toURL());
         assertEquals(1, getMockWebConnection().getRequestCount());
 
         // make sure changing the hash itself does not trigger the reload
@@ -1375,7 +1376,7 @@ public class Location2Test extends WebDriverTestCase {
             + "</html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        final WebDriver driver = loadPage2(html, new URL(URL_FIRST + "a.html#abc"));
+        final WebDriver driver = loadPage2(html, URI.create(URL_FIRST + "a.html#abc").toURL());
         assertEquals(1, getMockWebConnection().getRequestCount());
 
         // make sure changing the hash itself does not trigger the reload
